--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,21 @@
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Login{% endblock title %}
 
 {% block content %}
-    <h2>Log In</h2>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Log In</button>
-    </form>
+   <div class="container">
+       <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-6">
+            <h2>Log In</h2>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-primary" type="submit">Log In</button>
+        </form>
+        </div>
+        <div class="col-md-2"></div>
+       </div>
+   </div>
 {% endblock %}
