--- a/templates/projcts/project_details.html
+++ b/templates/projcts/project_details.html
@@ -17,7 +17,7 @@
             <div class="card-footer text-center text-muted">
                 <a href="#" class="btn btn-sm btn-primary">Vote</a>
                 {% if project.creator == user %}
-                <a href="#" class="btn btn-sm btn-primary">Edit</a>
+                <a href="{% url 'project_edit' project.id %}" class="btn btn-sm btn-primary">Edit</a>
                 <a href="#" class="btn btn-sm btn-primary">Delete</a>
                 <!-- else vote -->
                 {% endif %}
