--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,7 @@
              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
              {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="{% url 'project_list' %}">Home</a>
               </li>
               <li class="ms-2 nav-item">
                   <a class="nav-link" href="#">Add</a>
