--- a/templates/projcts/projects_list.html
+++ b/templates/projcts/projects_list.html
@@ -21,7 +21,7 @@
                 <a href="#" class="btn btn-sm btn-primary">Vote</a>
                 {% if project.creator == user %}
                 <a href="#" class="btn btn-sm btn-primary">Edit</a>
-                <a href="#" class="btn btn-sm btn-primary">Delete</a>
+                <a href="{% url 'project_delete' project.id %}" class="btn btn-sm btn-primary">Delete</a>
                 <!-- else vote -->
                 {% endif %}
               </div>
