added a projects create view

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="{% url 'project_list' %}">Home</a>
               </li>
               <li class="ms-2 nav-item">
-                  <a class="nav-link" href="#">Add</a>
+                  <a class="nav-link" href="{% url 'new_project' %}">Add</a>
                 </li>
                 <li class="ms-2 nav-item">
                   <a class="nav-link" href="#">Profile</a>
