--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load cloudinary %}
 <!DOCTYPE html>
 <html lang="en">
@@ -7,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codely-Awards|{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
     {% include 'navbar.html' %}
