--- a/templates/projcts/projects_list.html
+++ b/templates/projcts/projects_list.html
@@ -15,6 +15,8 @@
                 <span class="text-muted">by {{ project.creator }} |
                 {{ project.date }}</span></h5>
               <p class="card-text">{{ project.description}}</p>
+              <br>
+              <p><a href="{{project.link}}" target="_blank">Visit Website</a></p>
               
             </div>
             <div class="card-footer text-center text-muted">
