--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" href="{% url 'new_project' %}">Add</a>
                 </li>
                 <li class="ms-2 nav-item">
-                  <a class="nav-link" href="#">Profile</a>
+                  <a class="nav-link" href="{% url 'user_profile' user%}">Profile</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'logout'%}">Logout</a>
