--- a/templates/profiles/profile_details.html
+++ b/templates/profiles/profile_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>My Profile</h1>
+    <h1>{{object}}</h1>
   <ul>
     <li>{{object.user.username}}</li>
     <li>{{object.user.location}}</li>
