--- a/templates/projcts/project_details.html
+++ b/templates/projcts/project_details.html
@@ -4,26 +4,45 @@
 {% block content %}
  
     <div class="container">
+      <div class="row">
+          <div class="col-md-6"></div>
+          <div class="col-md-4">
+            <button class="btn btn-sm btn-outline-danger">Like</button>
+          </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-10">
 
-        <div class="card">           
+          <div class="card card-details">           
             {% cloudinary project.image class="card-image" %}
             <div class="card-body">
               <h5 class="card-title"><a href="{% url 'project_details' project.id %}">{{ project.title }}</a>&middot;
                 <span class="text-muted">by {{ project.creator }} |
                 {{ project.date }}</span></h5>
               <p class="card-text">{{ project.description}}</p>
+              <div class="voting-box">
+                <div class="design-box">
+                  
+                </div>
+              </div>
               
             </div>
-            <div class="card-footer text-center text-muted">
+            <!-- <div class="card-footer text-center text-muted">
                 <a href="#" class="btn btn-sm btn-primary">Vote</a>
                 {% if project.creator == user %}
                 <a href="{% url 'project_edit' project.id %}" class="btn btn-sm btn-primary">Edit</a>
                 <a href="#" class="btn btn-sm btn-primary">Delete</a>
                 <!-- else vote -->
                 {% endif %}
-              </div>
+              </div> -->
           </div>
+        </div>
+      </div>
 
     </div>
 
+{% endblock %}
+{% block scripts %}
 {% endblock %}
