added averages methods for usability and content

--- a/templates/projcts/projects_list.html
+++ b/templates/projcts/projects_list.html
@@ -21,8 +21,8 @@
                     <p>Total: {{ rating.total_rating }}</p>
                 {% endfor %}
                 <p>Average Rating in design: {{project.get_design_rating }}</p>
-                <p>Total Usability: {{project.get_usability_rating }}</p>
-                <p>Total Content: {{project.get_content_rating }}</p>
+                <p>Average Rating in Usability: {{project.get_usability_rating }}</p>
+                <p>Average Rating in Content: {{project.get_content_rating }}</p>
                 <!-- <span class="text-muted">by {{ project.creator }} |
                 {{ project.date }}</span></h5> -->
               <!-- <p class="card-text">{{ project.description}}</p> -->
