--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,3 +12,9 @@
     margin-bottom: 1rem;
     display: flex;
 }
+.rating-headers {
+    display: flex;
+}
+.rating-headers p {
+    padding-left: 1rem;
+}
