--- a/templates/projcts/project_details.html
+++ b/templates/projcts/project_details.html
@@ -5,14 +5,20 @@
  
     <div class="container">
       <div class="row">
-          <div class="col-md-6"></div>
+          <div class="col-md-6">
+            <h3>Average Rating: </h3>
+            <div class="rating-headers">
+              <p>Design: {{ project.get_design_rating }}</p>
+              <p>Usability: {{ project.get_usability_rating}}</p>
+              <p>Content: {{ project.get_content_rating}}</p>
+            </div>
+          </div>
           <div class="col-md-4">
             <button class="btn btn-sm btn-outline-danger">Like</button>
           </div>
       </div>
       <br>
       <div class="row">
-        <div class="col-md-2"></div>
         <div class="col-md-10">
 
           <div class="card card-details">           
@@ -29,15 +35,44 @@
               </div>
               
             </div>
-            <!-- <div class="card-footer text-center text-muted">
-                <a href="#" class="btn btn-sm btn-primary">Vote</a>
+            <br>
+            <br>
+            <p></p>
+            <div class="card-footer text-center text-muted">
+               
                 {% if project.creator == user %}
                 <a href="{% url 'project_edit' project.id %}" class="btn btn-sm btn-primary">Edit</a>
                 <a href="#" class="btn btn-sm btn-primary">Delete</a>
-                <!-- else vote -->
+                {% else %}
+                <a href="{% url 'newreview' project.id %}" class="btn btn-sm btn-primary">Vote</a>
                 {% endif %}
-              </div> -->
+              </div>
           </div>
+        </div>
+        <div class="col-md-2">
+          <h2>Ratings:</h2>
+          <!-- table starts -->
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Username</th>
+                <th scope="col">Design</th>
+                <th scope="col">Usability</th>
+                <th scope="col">Content</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for review in project.reviews.all %}
+              <tr>
+                <th scope="row">{{ review.reviewer }}</th>
+                <td>{{ review.design }}</td>
+                <td>{{ review.usability }}</td>
+                <td>{{ review.content }}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          <!-- table ends -->
         </div>
       </div>
 
