added home page styling

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,20 @@
+body {
+    background-color: #ececec;
+}
 .card-details {
     max-width: 70%;
     max-height: 50%;
+}
+.col-md-4 {
+    margin: 2rem;
+}
+.card {
+    font-size: 12px;
+}
+.card-image {
+    width: 100%;
+    object-fit: cover;
+    height: 200px;
 }
 .btn-vote {
     border-radius: 40%;
@@ -17,4 +31,10 @@
 }
 .rating-headers p {
     padding-left: 1rem;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Limelight', cursive;
+}
+p, small {
+    font-family: 'Lato', sans-serif;
 }
