added profile view styling and image hover effects

--- a/templates/profiles/profile_details.html
+++ b/templates/profiles/profile_details.html
@@ -1,11 +1,64 @@
 {% extends 'base.html' %}
-
+{% load cloudinary %}
 {% block content %}
-    <h1>{{object}}</h1>
-  <ul>
-    <li>{{object.user.username}}</li>
-    <li>{{object.user.location}}</li>
-    <li>{{object.user.occupation}}</li>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10">
+      
+        <div class="card">
+          <div class="c-head">
+            {% if object.photo %}
+            {% cloudinary object.photo class="rounded-circle prof-avi" %}
+            {% else %}
+            <img src="https://www.gravatar.com/avatar/8d004e48b85a0eec7f1027a206f67b9d?s=328&d=identicon&r=PG&f=1" alt="placeholder avatar" class="rounded-circle prof-avi">
+            {% endif %}
+            <h1 class="card-header">{{object}}</h1>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Timeline</h5>
+            <p class="card-text">{{object.bio}}</p>
+            {% if ovject.user == user %}
+            <a href="#" class="btn btn-primary">Edit Profile</a>
+            {% endif %}
+            <hr>
+
+            <div id="content-box">
+              <div class="container">
+                <div class="row">
+                  
+                  {% for project in object.user.projects.all %}
+                  <div class="container-img col-md-6">
+                    {% cloudinary project.image class="prof-display-img" %}
+                    <div class="middle">
+                      <div class="text"><a href="{% url 'project_details' project.id %}">View Project</a></div>
+                    </div>
+                  </div>
+                  {% empty %}
+                  <p>This profile has no submitted project yet</p>
+                  {% endfor %}
+                 
+                </div>
+              </div>
+
+            </div>
+            <div class="contct-details">
+              <h3>About {{object.user.username}}</h3>
+              <ul>
+                <li></li>
+                <li><strong>Location:</strong>{{object.user.location}}</li>
+                <li><strong>Occupation:</strong>{{object.user.occupation}}</li>
+                <li><strong>Email:</strong></li>
+             
+              </ul>
+            </div>
+          </div>
+          <!-- body -->
+        </div>
+        <!-- card -->
+      </div>
+    </div>
+  </div>
+    <h1></h1>
  
-  </ul>
 {% endblock %}
