--- a/static/css/main.css
+++ b/static/css/main.css
@@ -38,3 +38,54 @@ h1, h2, h3, h4, h5, h6 {
 p, small {
     font-family: 'Lato', sans-serif;
 }
+.prof-avi {
+    width: 50px;
+    height: 50px;
+}
+.c-head {
+    display: flex;
+}
+.prof-display-img {
+    object-fit: contain;
+    width: 100%;
+    height: auto;
+    opacity: 1;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+.container-img {
+    position: relative;
+    width: 50%;
+  }
+  
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .container-img:hover .prof-display-img {
+    opacity: 0.3;
+  }
+  
+  .container-img:hover .middle {
+    opacity: 1;
+  }
+  
+  .text {
+    background-color: #070707;
+    color: wheat;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+  .text a{
+      text-decoration: none;
+      color: wheat;
+  }
