--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,9 +32,18 @@ body {
 .rating-headers p {
     padding-left: 1rem;
 }
-h1, h2, h3, h4, h5, h6 {
+nav, h1, h2, h3, h4, h5, h6 {
     font-family: 'Limelight', cursive;
 }
+nav a, .logo{
+    font-size: 2rem;
+    color: #40434E;
+}
+nav {
+    border-bottom: #070707 1px solid;
+    
+}
+
 p, small {
     font-family: 'Lato', sans-serif;
 }
@@ -43,7 +52,13 @@ p, small {
     height: 50px;
 }
 .c-head {
-    display: flex;
+    /* display: flex; */
+}
+.seperator {
+    background-color: blue;
+    background-image: url('https://images.pexels.com/photos/1260727/pexels-photo-1260727.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-size: contain;
+    width: 100%;
 }
 .prof-display-img {
     object-fit: contain;
@@ -89,3 +104,48 @@ p, small {
       text-decoration: none;
       color: wheat;
   }
+
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: white;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #40434E;
+    display: block;
+    transition: 0.3s;
+    text-align: center;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+  
