--- a/templates/projcts/project_details.html
+++ b/templates/projcts/project_details.html
@@ -4,28 +4,31 @@
 {% block content %}
  
     <div class="container">
-      <div class="row">
-          <div class="col-md-6">
-            <h3>Average Rating: </h3>
-            <div class="rating-headers">
-              <p>Design: {{ project.get_design_rating }}</p>
-              <p>Usability: {{ project.get_usability_rating}}</p>
-              <p>Content: {{ project.get_content_rating}}</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <button class="btn btn-sm btn-outline-danger">Like</button>
-          </div>
-      </div>
+    
       <br>
       <div class="row">
         <div class="col-md-8">
           <!-- new card -->
+          <div>
+            <div class="row">
+              <div class="col-md-6">
+                <h3 class="ml-3"><a class="detail-header" href="{% url 'project_details' project.id %}">{{ project.title }}</a></h3>
+                <div class="rating-headers">
+                  <p>Design: {{ project.get_design_rating }}</p>
+                  <p>Usability: {{ project.get_usability_rating}}</p>
+                  <p>Content: {{ project.get_content_rating}}</p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <button class="btn btn-sm btn-outline-danger">Like</button>
+              </div>
+          </div>
+          </div>
 
           <div class="card" style="width: 100%;">
             {% cloudinary project.image class="card-image" %}
             <div class="card-body">
-              <h5 class="card-title"><a href="{% url 'project_details' project.id %}">{{ project.title }}</a></h5>
+              <h5 class="card-title"></h5>
               <p class="card-text">{{ project.description}}</p>
             </div>
             <ul class="list-group list-group-flush">
