--- a/static/css/main.css
+++ b/static/css/main.css
@@ -51,9 +51,9 @@ p, small {
     width: 50px;
     height: 50px;
 }
-.c-head {
-    /* display: flex; */
-}
+/* .c-head {
+    display: flex;
+} */
 .seperator {
     background-color: blue;
     background-image: url('https://images.pexels.com/photos/1260727/pexels-photo-1260727.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
